HackerRack problems added